--- a/src/components/NewExpense/ExpenseForm.css
+++ b/src/components/NewExpense/ExpenseForm.css
@@ -36,7 +36,7 @@ form {
   box-shadow: 0 1px 8px rgba(0, 0, 0, 0.25);
 }
 
-button {
+.new-expense__actions button {
   font: inherit;
   cursor: pointer;
   padding: 1rem 2rem;
@@ -53,7 +53,7 @@ button:active {
   border-color: #510674;
 }
 
-button.alternative {
+/* button.alternative {
   color: #220131;
   border-color: transparent;
   background-color: transparent;
@@ -62,4 +62,4 @@ button.alternative {
 button.alternative:hover,
 button.alternative:active {
   background-color: #ddb3f8;
-}
+} */
