--- a/frontend/src/components/Auth/Login.module.css
+++ b/frontend/src/components/Auth/Login.module.css
@@ -1,10 +1,11 @@
-.rootContainer {
+ .rootContainer {
   height: 100vh;
   width: 100vw;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  /* background-color:#2D2D2D ; */
 }
 
 .container {
@@ -66,4 +67,4 @@
 .rootContainer form .btnContainer button:hover {
   background-color: #510674;
   border-color: #510674;
-}
+}     
