--- a/frontend/src/components/Auth/Signup.module.css
+++ b/frontend/src/components/Auth/Signup.module.css
@@ -25,7 +25,7 @@
     justify-content: center;
     align-items: center;
     flex-wrap: wrap;
-    gap: 2rem;
+    gap: 1rem;
     margin-bottom: 1rem;
     text-align: left;
   }
@@ -51,7 +51,7 @@
     justify-content: center;
     flex-direction: column;
   }
-  button {
+  .button {
     font: inherit;
     cursor: pointer;
     padding: 1rem 2rem;
