--- a/frontend/src/components/UI/Header.module.css
+++ b/frontend/src/components/UI/Header.module.css
@@ -14,6 +14,16 @@
     /* width: 100vw; */
   
 }
+.button {
+    font: inherit;
+    cursor: pointer;
+    padding: 1rem 2rem;
+    border: 1px solid #40005d;
+    background-color: #40005d;
+    color: white;
+    border-radius: 12px;
+    margin: 0 1rem;
+  }
   .logo {
     font-size: 1.5rem;
     font-weight: bold;
@@ -24,7 +34,16 @@
   }
   
   .navItem {
+    font: inherit;
+    cursor: pointer;
+    padding: 1rem 2rem;
+    border: 1px solid #40005d;
+    background-color: #40005d;
+    color: white;
+    border-radius: 12px;
+    /* margin: 0 1rem; */
     text-decoration: none;
+    list-style: none;
     color: #F2E9E4;
     margin-left: 2rem;
     font-size: 1.1rem;
