--- a/frontend/src/components/NewExpense/ExpenseForm.css
+++ b/frontend/src/components/NewExpense/ExpenseForm.css
@@ -40,8 +40,8 @@ form {
   font: inherit;
   cursor: pointer;
   padding: 1rem 2rem;
-  /* border: 1px solid #40005d;
-  background-color: #40005d; */
+  border: 1px solid #40005d;
+  background-color: #40005d;
   color: white;
   border-radius: 12px;
   margin-right: 1rem;
