--- a/frontend/src/components/Auth/Login.module.css
+++ b/frontend/src/components/Auth/Login.module.css
@@ -68,3 +68,19 @@
   background-color: #510674;
   border-color: #510674;
 }     
+
+/* Add this style to your CSS module */
+
+.forgetButton {
+  background-color: #e5002a; /* Blue color, you can adjust this */
+  color: #fff;
+  padding: 10px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  margin-top: 10px; /* Adjust margin as needed */
+}
+
+.forgetButton:hover {
+  background-color: #0059a2; /* Darker shade of blue on hover */
+}
