--- a/frontend/src/components/Auth/Login.module.css
+++ b/frontend/src/components/Auth/Login.module.css
@@ -69,18 +69,17 @@
   border-color: #510674;
 }     
 
-/* Add this style to your CSS module */
 
 .forgetButton {
-  background-color: #e5002a; /* Blue color, you can adjust this */
+  /* background-color: #e5002a; */
   color: #fff;
   padding: 10px;
   border: none;
   border-radius: 4px;
   cursor: pointer;
-  margin-top: 10px; /* Adjust margin as needed */
+  margin-top: 10px; 
 }
 
 .forgetButton:hover {
-  background-color: #0059a2; /* Darker shade of blue on hover */
+  background-color: #0059a2; 
 }
