--- a/frontend/src/components/Root.module.css
+++ b/frontend/src/components/Root.module.css
@@ -2,7 +2,7 @@
     font-family: 'Arial', sans-serif;
     color: #2D2D2D; 
     min-height: 100vh;
-    padding: 2rem;
+    /* padding: 2rem; */
     box-sizing: border-box;
 
   } 
