--- a/frontend/src/components/Auth/Login.module.css
+++ b/frontend/src/components/Auth/Login.module.css
@@ -1,18 +1,17 @@
- .rootContainer {
+.rootContainer {
   height: 100vh;
   width: 100vw;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  /* background-color:#2D2D2D ; */
 }
 
 .container {
   background-color: #a892ee;
   padding: 1rem;
   margin: 4rem auto;
-  width: 30rem;
+  width: 26rem;
   max-height: 80%;
   max-width: 95%;
   border-radius: 12px;
@@ -62,24 +61,38 @@
   color: white;
   border-radius: 12px;
   margin: 0 1rem;
-  
 }
 .rootContainer form .btnContainer button:hover {
   background-color: #510674;
   border-color: #510674;
-}     
-
+}
 
 .forgetButton {
-  /* background-color: #e5002a; */
-  color: #fff;
   padding: 10px;
   border: none;
   border-radius: 4px;
   cursor: pointer;
-  margin-top: 10px; 
+  margin-top: 10px;
 }
 
 .forgetButton:hover {
-  background-color: #0059a2; 
+  color: rgb(30, 1, 57);
+}
+
+.secondBtnContainer {
+  align-self: center;
+  margin: 1rem 0 0 0;
+}
+
+@media (max-width: 375px) {
+  .fieldContainer {
+    width: 100%;
+  }
+  .fieldContainer input {
+    width: 100%;
+  }
+
+  .secondBtnContainer {
+    font-size: 0.861rem;
+  }
 }
